# TRIARC

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: models.yaml
docker/: Dockerfile
docs/: amd-fireworks.md  architecture.md  features.md  roadmap.md  routing.md  security.md
input/: tasks.json
orchestrator/: __init__.py  cli.py  registry.py  schema.py  tier1_client.py  worker_client.py
orchestrator/api/: app.py  run_manager.py  schemas.py
orchestrator/security/: egress.py
orchestrator/servers/web/: ops.py  server.py
output/: results.json
tests/: test_api.py  test_egress.py  test_registry.py  test_run_manager.py  test_schema.py  test_tui_app.py  test_web_ops.py
ui/tui/: api_client.py  app.css  app.py
ui/web/: index.html
ui/web/src/: App.css  App.tsx  api.ts  index.css  types.ts
ui/web/src/views/: GatesView.tsx  RegistryView.tsx  RunsView.tsx
