[project]
name = "triarc"
version = "0.1.0"
description = "TRIARC -- the autonomous AI developer that routes before it reasons"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "openai>=1.30",
    "click>=8.1",
    "mcp>=1.2",
    "rich>=13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "textual>=0.50"]
tui = ["textual>=0.50"]

[project.scripts]
triarc = "orchestrator.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
